--- a/module_05/ex01/Makefile
+++ b/module_05/ex01/Makefile
@@ -19,8 +19,11 @@ valgrind: re
 preprocess:
 	c++ -E $(FILES) > preprocessed.hpp
 
-fclean:
+fclean: clean
 	rm -f $(NAME)
+
+clean:
+	rm -f .gitignore
 
 re: fclean all;
 
