--- a/module_06/ex00/Makefile
+++ b/module_06/ex00/Makefile
@@ -29,7 +29,10 @@ test: re
 valgrind: re
 	valgrind ./$(NAME)
 
-fclean:
+clean:
+	rm -f .gitignore
+
+fclean: clean
 	rm -f $(NAME)
 
 re: fclean all;
