--- a/module_08/ex01/Makefile
+++ b/module_08/ex01/Makefile
@@ -16,7 +16,10 @@ run: re
 valgrind: re
 	valgrind ./$(NAME)
 
-fclean:
+clean:
+	rm -f .gitignore
+
+fclean: clean
 	rm -f $(NAME)
 
 re: fclean all;
