--- a/module_09/ex02/Makefile
+++ b/module_09/ex02/Makefile
@@ -16,7 +16,10 @@ run: re
 valgrind: re
 	valgrind ./$(NAME) `shuf -i 1-100000 -n 100 | tr "\n" " "`
 
-fclean:
+clean:
+	rm -f .gitignore
+
+fclean: clean
 	rm -f $(NAME)
 
 re: fclean all;
